syntax = "proto3";

package sdc.biceps;

option java_package = "org.somda.sdc.proto.model.biceps";
option java_outer_classname = "GetMdibType";

import "sdc/biceps/abstractget.proto";

  message GetMdib {
    AbstractGet abstract_get = 1;
  }
